--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -58,11 +58,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 	<body>
 		<Header />
                 <main>
-                        <article class="mx-auto max-w-6xl px-4 grid grid-cols-1 lg:grid-cols-[minmax(0,1fr)_250px] lg:gap-8">
-                                <div>
-                                        <div class="hero-image">
-                                                {heroImage && <Image width={1020} height={510} src={heroImage} alt="" />}
-                                        </div>
+                        <article class="mx-auto max-w-6xl px-4">
+                                <div class="hero-image">
+                                        {heroImage && <Image width={1020} height={510} src={heroImage} alt="" />}
+                                </div>
+                                <div class="grid grid-cols-1 lg:grid-cols-[minmax(0,1fr)_250px] lg:gap-8">
                                         <div class="prose">
                                                 <div class="title">
                                                         <div class="date">
@@ -80,8 +80,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                                                 </div>
                                                 <slot name="content" />
                                         </div>
+                                        <slot name="toc" />
                                 </div>
-                                <slot name="toc" />
                         </article>
                 </main>
 		<Footer />
