--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,6 +67,21 @@ h6 {
 	color: rgb(var(--black));
 	line-height: 1.2;
 }
+
+/* Offset untuk fixed header */
+:target::before {
+  content: "";
+  display: block;
+  height: 100px; /* Sesuaikan dengan tinggi header Anda */
+  margin-top: -100px; /* Nilai negatif sama dengan tinggi header */
+  visibility: hidden;
+}
+
+/* Untuk semua heading */
+h1, h2, h3, h4, h5, h6 {
+  scroll-margin-top: 100px; /* Sama dengan tinggi header */
+}
+
 h1 {
 	font-size: 3.052em;
 }
